# ai-dial-grounding

./: pyproject.toml
task/t1/: no_grounding.py
task/t2/: Input_vector_based.py  input_api_based.py
task/t3/: in_out_grounding.py
