[project]
name = "ai-dial-grounding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu==1.12.0",
    "langchain-chroma==1.0.0",
    "langchain-community==0.4.1",
    "langchain-openai==1.0.2",
    "requests>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task"]
